fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/Sample_Request_OLD__c.object-meta.xml
<CustomObject>
    <label>Sample Request Old</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Sample Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests Old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>