fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account__r.SAP_Sold_To__c</formula>
    <label>Account #</label>
    <type>Text</type>
</CustomField>