fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label>Dealer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>