fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Order_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Order_Explanation__c</fullName>
    <label>Order Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>