fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Other_UOM_2__c.field-meta.xml
<CustomField>
    <fullName>Other_UOM_2__c</fullName>
    <label>Other UOM # 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>BX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>