fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Owner_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <label>Owner&apos;s Profile</label>
    <type>Text</type>
</CustomField>