fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Owner_s_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Region__c</fullName>
    <formula>Text(Owner:User.Region__c)</formula>
    <label>Owner&apos;s Region</label>
    <type>Text</type>
</CustomField>