fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Product_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_2_Description__c</fullName>
    <formula>Product_2__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product # 2 Description</label>
    <type>Text</type>
</CustomField>