fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Product_4__c.field-meta.xml
<CustomField>
    <fullName>Product_4__c</fullName>
    <label>Other Product # 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>