fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Product_4s__c.field-meta.xml
<CustomField>
    <fullName>Product_4s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product # 4</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Sample_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>