fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Quantity_1__c.field-meta.xml
<CustomField>
    <fullName>Quantity_1__c</fullName>
    <label>Quantity # 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>