fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <defaultValue>TODAY()+2</defaultValue>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>