fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Requesting_User__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>