fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Sales_Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Key__c</fullName>
    <description>This is a throw away field until we move over Sample Requests to Prod</description>
    <label>Sales Org Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>