fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/SAP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Number__c</fullName>
    <label>SAP Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>