fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <inlineHelpText>Will default to current account&apos;s address if not populated</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>