fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>