fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/fields/UOM_1_c__c.field-meta.xml
<CustomField>
    <fullName>UOM_1_c__c</fullName>
    <label>UOM # 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>BX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>