fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/validationRules/Requested_Delivery_Date_Validity.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_Delivery_Date_Validity</fullName>
    <active>true</active>
    <errorConditionFormula>Requested_Delivery_Date__c &lt; TODAY()+2</errorConditionFormula>
    <errorDisplayField>Requested_Delivery_Date__c</errorDisplayField>
    <errorMessage>Date must be at least 2 days in the future</errorMessage>
</ValidationRule>