fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Product_5__c</columns>
    <columns>Product_2__c</columns>
    <columns>Product_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>