fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/listViews/All_Approved_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>All_Approved_Sample_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Approved_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All Approved Sample Requests</label>
    <language>en_US</language>
</ListView>