fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/listViews/All_To_be_Ship_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>All_To_be_Ship_Sample_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>To Be Shipped</value>
    </filters>
    <label>All To be Ship Sample Requests</label>
    <language>en_US</language>
</ListView>