fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/listViews/My_Pending_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>My_Pending_Sample_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Dealer_Name__c</columns>
    <columns>Requested_Delivery_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>My Pending Sample Requests</label>
    <language>en_US</language>
</ListView>