fullSandbox11072023/force-app/main/default/objects/Sample_Request_OLD__c/listViews/My_To_be_Shipped_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>My_To_be_Shipped_Sample_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>To Be Shipped</value>
    </filters>
    <label>My To be Shipped Sample Requests</label>
    <language>en_US</language>
</ListView>